Redesign of services. Added integration test.